在首页的游戏页面增加了比赛排名功能

--- a/game-website/matches.html
+++ b/game-website/matches.html
@@ -55,6 +55,14 @@
         </div>
         <div id="matches-table" class="card" style="grid-template-rows:auto"><!-- 动态渲染 --></div>
       </section>
+
+      <section class="section">
+        <div class="section-head">
+          <h2 class="section-title">飞行游戏排行榜</h2>
+          <p class="muted">最高分前三名玩家</p>
+        </div>
+        <div id="flight-game-scores" class="card" style="grid-template-rows:auto"><!-- 动态渲染 --></div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -94,5 +102,3 @@
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
-
-
