首页增加了小游戏

--- a/game-website/index.html
+++ b/game-website/index.html
@@ -80,41 +80,44 @@
       </section>
 
       <section class="section container">
-        <h2 class="section-title" data-i18n="index.popular">热门飞行游戏</h2>
+        <h2 class="section-title">热门游玩目的地</h2>
         <div class="card-grid">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">浪漫巴黎之旅</h3>
-              <div class="card-badge">新品</div>
+          <div class="card paris-card" style="background-image: url('https://images.unsplash.com/photo-1502602898657-3e91760cbb34?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'); background-size: cover; background-position: center; position: relative; overflow: hidden;">
+            <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.3)); backdrop-filter: blur(5px);"></div>
+            <div class="card-header" style="position: relative; z-index: 2;">
+              <h3 class="card-title" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.5);">法国巴黎</h3>
+              <div class="card-badge" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.7); font-weight: 600; font-size: 14px; letter-spacing: 1px;">浪漫之都</div>
             </div>
-            <div class="card-body">
-              <p>飞越埃菲尔铁塔，俯瞰塞纳河美景，体验浪漫之都的空中之旅。</p>
+            <div class="card-body" style="position: relative; z-index: 2;">
+              <p style="color: white; text-shadow: 0 1px 2px rgba(0,0,0,0.7);">埃菲尔铁塔、卢浮宫、香榭丽舍大街，体验欧洲最浪漫的城市风情。</p>
               <div class="card-actions">
-                <a class="btn btn-primary" href="flight-game.html">开始游玩</a>
+                <a class="btn btn-primary" href="paris-flight-game.html" style="background: rgba(255,255,255,0.9); color: #333; border: none;">开始游玩</a>
               </div>
             </div>
           </div>
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">马尔代夫海岛游</h3>
-              <div class="card-badge">热门</div>
+          <div class="card" style="background-image: url('https://images.unsplash.com/photo-1514282401047-d79a71a590e8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'); background-size: cover; background-position: center; position: relative; overflow: hidden;">
+            <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.3)); backdrop-filter: blur(5px);"></div>
+            <div class="card-header" style="position: relative; z-index: 2;">
+              <h3 class="card-title" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.5);">马尔代夫</h3>
+              <div class="card-badge" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.7); font-weight: 600; font-size: 14px; letter-spacing: 1px;">海岛天堂</div>
             </div>
-            <div class="card-body">
-              <p>飞越蓝色泻湖，探索马尔代夫群岛，享受阳光沙滩的完美假期。</p>
+            <div class="card-body" style="position: relative; z-index: 2;">
+              <p style="color: white; text-shadow: 0 1px 2px rgba(0,0,0,0.7);">蓝色泻湖、白色沙滩、水上别墅，享受印度洋的完美度假体验。</p>
               <div class="card-actions">
-                <a class="btn btn-primary" href="flight-game.html">开始游玩</a>
+                <a class="btn btn-primary" href="maldives-flight-game.html" style="background: rgba(255,255,255,0.9); color: #333; border: none;">开始游玩</a>
               </div>
             </div>
           </div>
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">日本樱花季</h3>
-              <div class="card-badge">推荐</div>
+          <div class="card" style="background-image: url('https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80'); background-size: cover; background-position: center; position: relative; overflow: hidden;">
+            <div class="card-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.3)); backdrop-filter: blur(5px);"></div>
+            <div class="card-header" style="position: relative; z-index: 2;">
+              <h3 class="card-title" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.5);">日本东京</h3>
+              <div class="card-badge" style="color: white; text-shadow: 0 2px 4px rgba(0,0,0,0.7); font-weight: 600; font-size: 14px; letter-spacing: 1px;">现代与传统</div>
             </div>
-            <div class="card-body">
-              <p>飞越富士山，欣赏樱花盛开的壮丽景色，体验日本春季的浪漫。</p>
+            <div class="card-body" style="position: relative; z-index: 2;">
+              <p style="color: white; text-shadow: 0 1px 2px rgba(0,0,0,0.7);">樱花季、富士山、浅草寺，感受日本独特的文化魅力与现代都市。</p>
               <div class="card-actions">
-                <a class="btn btn-primary" href="flight-game.html">开始游玩</a>
+                <a class="btn btn-primary" href="tokyo-flight-game.html" style="background: rgba(255,255,255,0.9); color: #333; border: none;">开始游玩</a>
               </div>
             </div>
           </div>
